# rVPNSE

./: --help  .gitignore  BENCHMARK_SUGGESTIONS.md  CHANGELOG.md  CLUSTERING_IMPLEMENTATION.md  CONTRIBUTING.md  Cargo.toml  DNS_FIXES.md  ISSUES.md  README.md  SECURITY.md  SOFTETHER_COMPARISON.md  VPN_FIXES_SUMMARY.md  VPN_FUNCTIONALITY_FIXES.md  VPN_FUNCTIONALITY_FIXES_UPDATE.md  VPN_SESSION_FIXES.md  analyze_binary_data.sh  analyze_binary_protocol.sh  clustering_example.toml  config.toml  criterion.toml  detect_vpn_dhcp.sh  fix_dns_resolution.sh  fix_vpn_connection.sh  fix_vpn_dns.sh  fix_vpn_networking.sh  fix_vpn_routing.sh  fix_vpn_session.sh  install_vpn_hooks.sh  libauth.rlib  libtest_auth.rlib  quick_vpn_test.sh  test_clustering.rs  test_config.toml  test_improvements.sh  test_packet_framing.sh  test_vpn_connection.sh  test_vpn_ranges.sh  test_vpn_routing.sh  troubleshoot_vpn.sh  (+1 more)
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: README.md  benchmark.yml  benchmarks.yml  changelog.yml  ci.yml  release-robust.yml  release.yml  security.yml  test.yml
benches/: client_benchmarks.rs  config_benchmarks.rs  ffi_benchmarks.rs
benchmark-reports/: benchmark-summary-2025-06-25_03-45-08.md  benchmark-summary-2025-06-25_03-46-06.md  metrics-2025-06-25_03-45-08.json  metrics-2025-06-25_03-46-06.json
config/: README.md  config-mobile.toml  config-production.toml  config.toml  example.toml  test_config.toml
docs/: README.md  configuration.md
docs/01-overview/: README.md  architecture.md  features.md  status.md  what-is-rvpnse.md
docs/02-quickstart/: README.md  configuration.md  first-connection.md  installation.md
docs/03-integration/: README.md
docs/03-integration/desktop/: README.md  python.md
docs/03-integration/mobile/: README.md  android.md  flutter.md  ios.md
docs/03-integration/native/: README.md
docs/04-api/: README.md  c-ffi.md
docs/05-build/: README.md
docs/06-advanced/: README.md
docs/07-troubleshooting/: README.md  common-issues.md  vpn-connectivity.md
examples/: debug_auth.rs
examples/rvpnse_client/: .gitignore  Cargo.toml  README.md  client_connection.c  config.toml
examples/rvpnse_client/include/: rvpnse.h
examples/rvpnse_client/src/: advanced_demo.rs  cli.rs  connectivity.rs  demo.rs  main.rs
include/: rvpnse.h
scripts/: run-benchmarks.sh  update-readme-benchmarks.py  update-readme-benchmarks.sh  validate-workflows.sh
src/: client.rs  client_optimized.rs  config.rs  error.rs  ffi.rs  lib.rs
src/crypto/: mod.rs  tls.rs
src/protocol/: auth.rs  binary.rs  mod.rs  pack.rs  packets.rs  session.rs  watermark.rs
src/tunnel/: linux.rs  linux_tun.rs  macos.rs  macos_tun.rs  mod.rs  mod_broken.rs  packet_framing.rs  real_tun.rs  windows.rs  windows_tun.rs
tests/: rvpnse.c  test_ffi.c  test_ip  test_ip.c  test_runner.sh
tools/: README.md  build.py  update_project_name.sh
tools/docker/: Dockerfile.android
