[package]
name = "rvpnse"
version = "0.1.0"
edition = "2021"
authors = ["Rust VPNSE Team"]
description = "Static library for SoftEther SSL-VPN protocol implementation"
license = "Apache-2.0"
repository = "https://github.com/rVPNSE/rVPNSE"
keywords = ["vpn", "softether", "ssl-vpn", "static-library", "ffi"]
categories = ["network-programming", "api-bindings"]

[lib]
name = "rvpnse"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# TLS implementation - conditional crypto providers for platform compatibility
rustls = { version = "0.23", default-features = false, features = ["std"] }
rustls-pemfile = "2.0"
webpki-roots = "1.0"

# Use ring for most platforms (better performance and security)
ring = { version = "0.17", optional = true }

# Use aws-lc-rs as fallback for platforms where ring has issues
aws-lc-rs = { version = "1.13", features = ["bindgen"], optional = true }

# Serialization for configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error handling
thiserror = "2.0"

# Networking utilities
bytes = "1.0"
# HTTP client for SoftEther SSL-VPN protocol
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
url = "2.5"
# Base64 encoding for authentication
base64 = "0.22"
# Network interface management
ipnet = "2.9"
# IP address detection
public-ip = "0.2"

# UUID generation for sessions
uuid = { version = "1.0", features = ["v4"] }

# Fast random number generation
fastrand = "2.0"

# Lazy static for global state
lazy_static = "1.4"

# Async runtime (for examples)
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "time", "signal"], optional = true }
# Futures utilities for async programming
futures = "0.3"
# Logging
log = "0.4"
env_logger = "0.11"

# Platform-specific dependencies for TUN/TAP
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["handleapi", "fileapi", "ioapiset", "synchapi", "winnt", "minwinbase", "errhandlingapi", "winerror"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# For testing and examples
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
env_logger = "0.11"

# Benchmarking
criterion = { version = "0.6", features = ["html_reports"] }
# pprof = { version = "0.13", features = ["criterion", "flamegraph"] } # Disabled due to security advisory RUSTSEC-2024-0408

# Testing utilities
tempfile = "3.8"
mock_instant = "0.6"

[[bench]]
name = "config_benchmarks"
harness = false

[[bench]]
name = "client_benchmarks" 
harness = false

[[bench]]
name = "ffi_benchmarks"
harness = false

[[bin]]
name = "rvpnse-client"
path = "src/bin/client.rs"

[features]
# Default to ring for most platforms with basic functionality
default = ["ring-crypto", "tokio-runtime"]

# Feature flags for crypto providers  
ring-crypto = ["ring", "rustls/ring"]
aws-lc-crypto = ["aws-lc-rs", "rustls/aws_lc_rs"]

# Runtime features
tokio-runtime = ["tokio"]
