[package]
name = "rvpnse_client"
version = "0.1.0"
edition = "2021"
authors = ["rVPNSE Team"]
description = "Example applications demonstrating the rVPNSE static library for SoftEther SSL-VPN connections"
license = "Apache-2.0"
repository = "https://github.com/vpnse/rvpnse"
keywords = ["vpn", "softether", "ssl-vpn", "example", "demo"]
categories = ["network-programming", "authentication"]

[[bin]]
name = "rvpnse_client"
path = "src/main.rs"

[dependencies]
rvpnse = { path = "../.." }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
env_logger = "0.11"
log = "0.4"
clap = { version = "4.0", features = ["derive"] }
